--- a/osx/Brewfile
+++ b/osx/Brewfile
@@ -1,26 +1,27 @@
-brew awscli
-brew azure-cli
-brew ca-certificates
-brew fzf
-brew gdbm
-brew helm
-brew jq
-brew k9s
-brew kubectx
-brew kubernetes-cli
-brew mpdecimal
-brew ncurses
-brew oniguruma
-brew openssl@1.1
-brew python@3.10
-brew readline
-brew six
-brew sqlite
-brew terraform
-brew tree
-brew watch
-brew xz
+brew "awscli"
+brew "azure-cli"
+brew "ca-certificates"
+brew "fzf"
+brew "gdbm"
+brew "helm"
+brew "jq"
+brew "k9s"
+brew "kubectx"
+brew "kubernetes-cli"
+brew "mpdecimal"
+brew "ncurses"
+brew "oniguruma"
+brew "openssl@1.1"
+brew "python@3.10"
+brew "readline"
+brew "six"
+brew "sqlite"
+brew "terraform"
+brew "tree"
+brew "watch"
+brew "xz"
+brew "wget"
 
-cask google-cloud-sdk
-cask spotify
-cask visual-studio-code
+cask "google-cloud-sdk"
+cask "spotify"
+cask "visual-studio-code"
