add tmux plugin dir structure

--- a/shared/.tmux.conf
+++ b/shared/.tmux.conf
@@ -1,6 +1,28 @@
 set -g default-terminal "screen-256color"
 
-# change prefix mapping
+# remap prefix
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
+
+# remap split window keybindings
+unbind %
+bind | split-window -h
+
+unbind '"'
+bind - split-window -v
+
+# shortcut to source config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+# resize panes
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
+
+# maximize pane
+bind -r m resize-pane -Z
+
+set -g mouse on
