--- a/shared/.tmux.conf
+++ b/shared/.tmux.conf
@@ -26,3 +26,12 @@ bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
 
 set -g mouse on
+
+# tpm plugin
+set -g @plugin 'tmux-plugins/tpm'
+
+# list of tmux plugins
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.con)
+run '~/.tmux/plugins/tpm/tpm'
