--- a/shared/.tmux.conf
+++ b/shared/.tmux.conf
@@ -27,6 +27,16 @@ bind -r m resize-pane -Z
 
 set -g mouse on
 
+# vim mode
+set-window-option -g mode-keys vi
+
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
 
