--- a/shared/.tmux.conf
+++ b/shared/.tmux.conf
@@ -45,3 +45,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.con)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Swap windows
+bind-key S-Left swap-window -t -1\; select-window -t -1
+bind-key S-Right swap-window -t +1\; select-window -t +1
