--- a/osx/vs-code/settings.json
+++ b/osx/vs-code/settings.json
@@ -21,6 +21,7 @@
     },
     // Vim keybindings
     "vim.normalModeKeyBindingsNonRecursive": [
+        // Navigate editors
         {
           "before": ["tab"],
           "commands": ["workbench.action.nextEditor"]
@@ -29,22 +30,60 @@
           "before": ["shift+tab"],
           "commands": ["workbench.action.previousEditor"]
         },
+        // Close editors
         {
           "before": ["<leader>", "backspace"],
           "commands": ["workbench.action.closeActiveEditor"]
         },
         {
+          "before": ["<leader>","shift+backspace"],
+          "commands": ["workbench.action.closeOtherEditors"]
+        },
+        // Markdown preview
+        {
           "before": ["<leader>", "m", "d"],
           "commands": ["markdown.showPreviewToSide"],
           "when": ["editorLangId == 'markdown'"]
         },
+        // Comment line
         {
           "before": ["<leader>", "/"],
           "commands": ["editor.action.commentLine"]
         },
+        // Open/close sidebar
         {
           "before": ["<leader>", "e"],
-          "commands": ["workbench.action.toggleSidebarVisibility"]
+          "commands": ["workbench.action.toggleSidebarVisibility", "workbench.files.action.collapseExplorerFolders"]
+        },
+        // LSP shortcuts
+        {
+          "before": ["g", "d"],
+          "commands": ["editor.action.revealDefinition"],
+          "when": "editorHasDefinitionProvider && editorTextFocus && !isInEmbeddedEditor"
+        },
+        {
+          "before": ["shift+k"],
+          "commands": ["editor.action.showDefinitionPreviewHover"]
+        },
+        {
+          "before": ["[", "d"],
+          "commands": ["editor.action.marker.next"],
+          "when": "editorFocus"
+        },
+        {
+          "before": ["]", "d"],
+          "commands": ["editor.action.marker.prev"],
+          "when": "editorFocus"
+        },
+        {
+          "before": ["<leader>", "v", "r", "r"],
+          "commands": ["editor.action.referenceSearch.trigger"],
+          "when": "editorFocus"
+        },
+        {
+          "before": ["<leader>", "v", "r", "n"],
+          "commands": ["editor.action.rename"],
+          "when": "editorHasRenameProvider && editorTextFocus && !editorReadonly"
         },
         // Delete without sending to clipboard register
         {
@@ -68,9 +107,21 @@
         {
           "before": ["N"],
           "after": ["N", "z", "z", "z", "v"]
+        },
+        // Make file executable/unexecutable
+        {
+          "before": ["<leader>","x"],
+          "commands": ["chmod.plusX"]
+        },
+        {
+          "before": ["<leader>","-","x"],
+          "commands": ["chmod.minusX"]
+        },
+        // Yank to end of line instead of full line
+        {
+          "before": ["shift+y"],
+          "after": ["y", "$"]
         }
-        // vim.keymap.set("n", "n", "nzzzv")
-        // vim.keymap.set("n", "N", "Nzzzv")
     ],
     "vim.visualModeKeyBindingsNonRecursive": [
         {
@@ -81,8 +132,22 @@
         {
           "before": ["<leader>", "d"],
           "after": ["\"", "_", "d"]
-        }
+        },
+        {
+          "before": ["<leader>", "c"],
+          "after": ["\"", "_", "c"]
+        },
+    ],
+    "vim.insertModeKeyBindings": [
+      {
+        "before": ["ctrl+h"],
+        "commands": ["editor.action.triggerSuggest"],
+        "when": "editorHasCompletionItemProvider && textInputFocus && !editorReadonly && !suggestWidgetVisible"
+      },
     ],
     // Nerd Font
     "terminal.integrated.fontFamily": "MesloLGS NF",
+    "editor.tabSize": 2,
+    "git.ignoreMissingGitWarning": true,
+    "editor.inlineSuggest.enabled": true,
 }
