--- a/osx/vs-code/settings.json
+++ b/osx/vs-code/settings.json
@@ -1,9 +1,22 @@
 {
+    "[typescript]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode",
+      "editor.formatOnSave": true
+    },
+    "[typescriptreact]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode",
+      "editor.formatOnSave": true
+    },
+    "[javascript]": {
+      "editor.defaultFormatter": "esbenp.prettier-vscode",
+      "editor.formatOnSave": true
+    },
     "[terraform]": {
         "editor.defaultFormatter": "hashicorp.terraform"
     },
     "[python]": {
-        "editor.formatOnType": true
+        "editor.formatOnType": true,
+        "editor.tabSize": 4
     },
     "vs-kubernetes": {
         "vscode-kubernetes.minikube-path.mac": "/Users/sfitzgerald/.vs-kubernetes/tools/minikube/darwin-arm64/minikube",
@@ -169,4 +182,12 @@
     "tailwindCSS.includeLanguages": {
       "plaintext": "typescript"
     },
+    "github.copilot.enable": {
+      "*": false,
+      "plaintext": false,
+      "markdown": false,
+      "scminput": false
+    },
+    "window.zoomLevel": 1,
+    "terminal.external.osxExec": "iTerm.app",
 }
