--- a/osx/Brewfile
+++ b/osx/Brewfile
@@ -22,8 +22,9 @@ brew "watch"
 brew "xz"
 brew "wget"
 brew "prettierd"
-brew "koekeishiya/formulae/yabai"
-brew "koekeishiya/formulae/skhd"
+tap "koekeishiya/formulae"
+brew "yabai"
+brew "skhd"
 
 cask "google-cloud-sdk"
 cask "spotify"
